--- a/wiki/ProjectSummary.wiki
+++ b/wiki/ProjectSummary.wiki
@@ -1,11 +1,34 @@
-#summary Project Summary
-#labels Project,Summary,Slides,Design,Features,Phase-Implementation
+# About #
+We hacked Microsoft Kinect to convert a regular (3D) display into an adaptive (3D) Display by tracking the body movements of a user. This is an extension to Johnny Lee's work on head tracking with the added advantage that here, the user does not have to wear any special device to track their movements. Tested on MS Windows 7 & Vista.
 
-==Microsoft Kinect, Depth Detection and Motion Tracking==
-  ![http://manavkataria.files.wordpress.com/2012/01/slide1.jpg](http://manavkataria.files.wordpress.com/2012/01/slide1.jpg)
+## Video: Ahmed Kirmani talks about Project Mindspace ([ProjectSummary](ProjectSummary.md) Slides) ##
+> <a href='http://www.youtube.com/watch?feature=player_embedded&v=XxQ349PSuNA' target='_blank'><img src='http://img.youtube.com/vi/XxQ349PSuNA/0.jpg' width='425' height=344 /></a>
+
+Playing with Mindspace:
 > ![http://manavkataria.files.wordpress.com/2012/01/longshot.jpg](http://manavkataria.files.wordpress.com/2012/01/longshot.jpg)
-==Multiple views of the same scene from different viewing angles based on user's location relative to the display==
-  ![http://manavkataria.files.wordpress.com/2012/01/slide2.jpg](http://manavkataria.files.wordpress.com/2012/01/slide2.jpg)
 
-----
-Have a question or a comment? Feel free to drop a line.
+# Inspiration #
+This project was inspired by Johnny Lee's Head Tracking project using Nintendo Wii:
+> <a href='http://www.youtube.com/watch?feature=player_embedded&v=Jd3-eiid-Uw' target='_blank'><img src='http://img.youtube.com/vi/Jd3-eiid-Uw/0.jpg' width='425' height=344 /></a>
+
+# Applications Areas #
+  * Live broadcast of sports & events
+  * Adaptive 3D movies
+  * Virtual Reality
+  * Gaming
+
+# Future Work #
+We would like to make a camera that can record 3D movements and interpolate between them for Live Sports & Events broadcast.
+
+# Contact #
+Have a question or a comment? Feel free to drop a line:
+  * **project.mindspace** (at) gmail.com
+
+
+---
+
+Project developed at first edition of Design and Innovation Workshop-2011 organized by [MIT Media Lab, India Initiative](http://india.media.mit.edu/workshops/coep2011/index.html)
+
+**Team** [Manav Kataria](http://www.linkedin.com/in/ManavKataria), Shakti Tripathy, Pooja Deshpande, Kaushal Jain and Saniya Shaikh.
+
+![http://manavkataria.files.wordpress.com/2011/03/mitml-logo-web.png](http://manavkataria.files.wordpress.com/2011/03/mitml-logo-web.png)
