--- a/wiki/ProjectSummary.wiki
+++ b/wiki/ProjectSummary.wiki
@@ -2,10 +2,10 @@
 #labels Project,Summary,Slides,Design,Features,Phase-Implementation
 
 ==Microsoft Kinect, Depth Detection and Motion Tracking==
-  ![http://manavkataria.files.wordpress.com/2012/01/slide1.jpg](http://manavkataria.files.wordpress.com/2012/01/slide1.jpg)
-> ![http://manavkataria.files.wordpress.com/2012/01/slide1.jpg](http://manavkataria.files.wordpress.com/2012/01/slide1.jpg)
+  ![slide1](http://manavkataria.files.wordpress.com/2012/01/slide1.jpg)
+  
 ==Multiple views of the same scene from different viewing angles based on user's location relative to the display==
-  ![http://manavkataria.files.wordpress.com/2012/01/slide2.jpg](http://manavkataria.files.wordpress.com/2012/01/slide2.jpg)
+  ![slide2](http://manavkataria.files.wordpress.com/2012/01/slide2.jpg)
 
 ----
 Have a question or a comment? Feel free to drop a line.
